Bug 38441: Style updates for staffnotes
- Use pre for staffnotes in staff illview
- Ensure <pre> has same font-family as rest of the page
- Render html for staff notes in list. Truncate to 100 chars max

--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -3901,6 +3901,10 @@ input.renew {
             max-height: 70vh;
         }
     }
+
+    pre {
+        font-family: inherit;
+    }
 }
 
 .ill-view-panel {
